--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <div id="scatter_container">
         <div id="scatter"></div>
-        <div id="legend" class="legend"></div>
-        <div class="b_container">
-            <input type="button" value="All Leagues" id="reset-button" onclick="resetLeague()">
+        <div>
+            <div class="b_container">
+                <input type="button" value="All Leagues" id="reset-button" onclick="resetLeague()">
+            </div>
+            <div id="legend" class="legend"></div>
         </div>
     </div>
 
