--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <input type="button" value="All Leagues" id="reset-button" onclick="resetLeague()">
             </div>
             <div id="legend" class="legend"></div>
+            <div class="b_container">
+                <input type="button" value="All Positions" id="reset-position-button" onclick="resetPosition()">
+            </div>
+            <div id="position-legend" class="legend"></div>
         </div>
     </div>
 
