--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <h1> Top 30 Fifa Players Overview</h1>
 
     <h2>
-        The chart on this webpage visualizes the performance of the top 30 FIFA soccer players from 2018 to 2024, focusing on their Overall and Potential ratings.
+        This chart visualizes the top 30 FIFA soccer players from 2018 to 2024, focusing on their Overall and Potential ratings from the FIFA video game series.
         It highlights how elite players maintain high ratings over multiple years, showcasing the longevity of their peak performance.
-        Use the navigation buttons to explore player ratings across different years.
-        Filter by position or league using the Legend Box, and hover over any data point to see detailed information about each player.
+        Overall rating represents how strong the player is in the game for that year.
+        Potential rating reflects how good the game predicts the player could become in the future.
+        Switch between years using the navigation buttons below the chart to see how the top players change over time and read annotations about major soccer events for each year.
+        Use the legend to filter by league or position, and hover over any data point for detailed player stats.
+        This visualization offers a unique look at elite player performance, showing how some legends maintained high ratings over the years while new stars emerged in the game’s data.
     </h2>
 
 
